QoL - Stop creatures from being able to hide behind a pole if their token is too big to do so.

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -2252,6 +2252,7 @@ body:not(.body-rpgcampaign-details) .sidebar__pane-content {
 }
 
 #raycastingCanvas{
+    pointer-events:none;
     mix-blend-mode:multiply;
     filter:blur(2px);
 }
